[metadata]
name = free-proxy
version = file: VERSION
url = https://github.com/ajanderson1/
author = AJ Anderson
author_email = ajanderson1@gmail.com

[options]
# Use the find function to find modules/packages
packages = find:
# The root directory is the current directory, relative to setup.cfg
packages_dir =
    .

install_requires =
    beautifulsoup4==4.11.1

include_package_data = True
